--- a/10-introduction.qmd
+++ b/10-introduction.qmd
@@ -100,6 +100,10 @@ library(seasonalbook)
 plot(grocery)
 ```
 
+```{r}
+plot_fred("PCU445110445110")
+```
+
 ## Acknowledgements {.unnumbered}
 
 We are indebted to the United States Census Bureau for X-13ARIMA-SEATS and support for research around the software.
